--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -1,36 +1,23 @@
-<h1><a href="/GroundForge/help/">Help intro</a></h1>
-<p>Patterns</p>
+<h1>MENU></h1>
 <ul>
-  <li><a href="/GroundForge/help/Examples">Example Pages</a></li>
-  <li>Reshape Pair Diagrams
-    <ul>
-      <li><a href="/GroundForge/help/Reshape-Patterns">Intro</a></li>
-      <li><a href="/GroundForge/help/Reshape-Using-Clones">Using Clones</a></li>
-      <li><a href="/GroundForge/help/Reshape-Using-Copies">Using Copies</a></li>
-    </ul>
-  </li>
-  <li><a href="/GroundForge/help/Reversed-engineering-of-patterns">Advanced Design</a></li>
+  <li><a href="/index">Main page</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Tips-&-Tricks-&-Other-notes">Tips, Tricks & Notes</a></li>
 </ul>
-<p>Help on forms and buttons</p>
+
+<h3>Examples</h3>
 <ul>
-  <li><a href="/GroundForge/help/Choose-Stitches">Stitches</a></li>
-  <li><a href="/GroundForge/help/Thread-Colors">Thread colors</a></li>
-  <li><a href="/GroundForge/help/Parameters">Parameters</a></li>
-  <li><a href="/GroundForge/help/Undo"><img src="/GroundForge/images/link.png"> and undo</a></li>
+  <li><a href="/docs/bias-grounds">Bias Grounds</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Snowflakes">Snowflakes</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders>Spiders</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds>Pagoda's or Triangular Grounds</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Fish>Milanese Fish</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Lotus>Milanese Lotus</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Fancy-examples>Fancy examples</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns>Marian's patterns</a></li>
 </ul>
-<p>Miscellaneous</p>
+    
+<h3>Miscellaneous</h3> 
 <ul>
-  <li><a href="/GroundForge/help/Pin-distances-and-angles">Pin distances and angles</a></li>
-  <li><a href="/GroundForge/help/Color-Code">Color code, Twist marks</a></li>
-  <li><a href="https://github.com/d-bl/GroundForge/releases/download/2017-06-05/untangle.mp4">Untangle</a> (20sec MP4)</li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Mathematics>Mathematics</a></li>
 </ul>
-<p>Maintenance &amp; Contribution</p>
-<ul>
-  <li><a href="/GroundForge/help/Stay-Posted">Stay Posted</a></li>
-  <li>
-    <a href="https://github.com/jo-pol/GroundForge/tree/master/docs/help">Help source</a>
-    <br>
-    (<a href="https://help.github.com/articles/editing-files-in-another-user-s-repository/">propose changes</a>)
-  </li>
-  <li><a href="/GroundForge/help/Fix-Old-Links">Fix Old Links</a></li>
-</ul>
+    
