--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -8,16 +8,16 @@
 <ul>
   <li><a href="/docs/bias-grounds">Bias Grounds</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Snowflakes">Snowflakes</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders>Spiders</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds>Pagoda's or Triangular Grounds</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Fish>Milanese Fish</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Lotus>Milanese Lotus</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Fancy-examples>Fancy examples</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns>Marian's patterns</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders>Spiders"</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Fish">Milanese Fish</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Lotus">Milanese Lotus</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Fancy-examples">Fancy examples</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns">Marian's patterns</a></li>
 </ul>
     
 <h3>Miscellaneous</h3> 
 <ul>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Mathematics>Mathematics</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Mathematics">Mathematics</a></li>
 </ul>
     
