--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -1,12 +1,14 @@
-<h1>MENU></h1>
+<h1>MENU</h1>
+
+<p>
 <ul>
-  <li><a href="/index">Main page</a></li>
+  <li><a href="https:/MAE-gf/index">Main page</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Tips-&-Tricks-&-Other-notes">Tips, Tricks & Notes</a></li>
 </ul>
 
 <h3>Examples</h3>
 <ul>
-  <li><a href="/docs/bias-grounds">Bias Grounds</a></li>
+  <li><a href="https://maetempels.github.io/MAE-gf/docs/bias-grounds">Bias Grounds</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Snowflakes">Snowflakes</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders>Spiders"</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds</a></li>
@@ -20,4 +22,8 @@
 <ul>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Mathematics">Mathematics</a></li>
 </ul>
-    
+</p>
+
+<p>
+<hr>
+</p>
