--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -8,16 +8,16 @@
 
 <h3>Examples</h3>
 <ul>
-  <li><a href="https://maetempels.github.io/MAE-gf/docs/bias-grounds">Bias Grounds</a></li>
+  <li><a href="https:/MAE-gf/docs/bias">Bias Grounds</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Snowflakes">Snowflakes</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders>Spiders"</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders">Spiders</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Fish">Milanese Fish</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Lotus">Milanese Lotus</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Fancy-examples">Fancy examples</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns">Marian's patterns</a></li>
 </ul>
-    
+
 <h3>Miscellaneous</h3> 
 <ul>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Mathematics">Mathematics</a></li>
