--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -2,7 +2,7 @@
 
 <p>
 <ul>
-  <li><a href="https:/MAE-gf/index">Main page</a></li>
+  <li><a href="https:/MAE-gf/index">Start page</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Tips-&-Tricks-&-Other-notes">Tips, Tricks & Notes</a></li>
 </ul>
 
