--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -2,13 +2,13 @@
 
 <p>
 <ul>
-  <li><a href="https://maetempels/github.io/MAE-gf/index">Start page</a></li>
+  <li><a href="https://maetempels.github.io/MAE-gf/index">Start page</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Tips-&-Tricks-&-Other-notes">Tips, Tricks & Notes</a></li>
 </ul>
 
 <h3>Examples</h3>
 <ul>
-  <li><a href="https://maetempels/github.io/MAE-gf/docs/bias">Bias Grounds</a></li>
+  <li><a href="https://maetempels.github.io/MAE-gf/docs/bias">Bias Grounds</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Snowflakes">Snowflakes</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders">Spiders</a></li>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds</a></li>
