20171008 added tips&trick page

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -3,7 +3,7 @@
 <p>
 <ul>
   <li><a href="https://maetempels.github.io/MAE-gf/index">Start page</a></li>
-  <li><a href="https://maetempels.github.io/MAE-gf/tricks">Tips, Tricks & Notes</a></li>
+  <li><a href="https://maetempels.github.io/MAE-gf/docs/tricks">Tips, Tricks & Notes</a></li>
 </ul>
 
 <h3>Examples</h3>
