--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -21,6 +21,7 @@
 <h3>Miscellaneous</h3> 
 <ul>
   <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Mathematics">Mathematics</a></li>
+  <li><a href="https://github.com/MAETempels/MAE-gf/wiki">Wiki style version</a></li>
 </ul>
 </p>
 
