--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -1,28 +1,28 @@
 <h1>MENU</h1>
 
+<h3>Start etc.</h3>
 <p>
-<ul>
-  <li><a href="https://maetempels.github.io/MAE-gf/index">Start page</a></li>
-  <li><a href="https://maetempels.github.io/MAE-gf/docs/tricks">Tips, Tricks & Notes</a></li>
-</ul>
+<a href="https://maetempels.github.io/MAE-gf/index">Start page</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/tricks">Tips, Tricks & Notes</a><br>
+</p>
 
 <h3>Examples</h3>
-<ul>
-  <li><a href="https://maetempels.github.io/MAE-gf/docs/bias">Bias Grounds</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Snowflakes">Snowflakes</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders">Spiders</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Fish">Milanese Fish</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Lotus">Milanese Lotus</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Fancy-examples">Fancy examples</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns">Marian's patterns</a></li>
-</ul>
+<p>
+<a href="https://maetempels.github.io/MAE-gf/docs/bias">Bias Grounds</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Snowflakes">Snowflakes</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders">Spiders</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Fish">Milanese Fish</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Lotus">Milanese Lotus</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Fancy-examples">Fancy examples</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns">Marian's patterns</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/fancy">TEST</a><br>
+</p>
 
 <h3>Miscellaneous</h3> 
-<ul>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki/Mathematics">Mathematics</a></li>
-  <li><a href="https://github.com/MAETempels/MAE-gf/wiki">Wiki style version</a></li>
-</ul>
+<p>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Mathematics">Mathematics</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki">Wiki style version</a><br>
 </p>
 
 <p>
