--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -9,19 +9,19 @@
 <h3>Examples</h3>
 <p>
 <a href="https://maetempels.github.io/MAE-gf/docs/bias">Bias Grounds</a><br>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Snowflakes">Snowflakes</a><br>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders">Spiders</a><br>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds</a><br>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Fish">Milanese Fish</a><br>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Lotus">Milanese Lotus</a><br>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Fancy-examples">Fancy examples</a><br>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns">Marian's patterns</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Snowflakes">Snowflakes (wiki)</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders">Spiders (wiki)</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds (wiki)</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Fish">Milanese Fish (wiki)</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Lotus">Milanese Lotus (wiki)</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/fancy">Fancy examples</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns">Marian's patterns (wiki)</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fancy">TEST</a><br>
 </p>
 
 <h3>Miscellaneous</h3> 
 <p>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Mathematics">Mathematics</a><br>
+<a href="https://github.com/MAETempels/MAE-gf/wiki/Mathematics">Mathematics (wiki)</a><br>
 <a href="https://github.com/MAETempels/MAE-gf/wiki">Wiki style version</a><br>
 </p>
 
