--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -16,7 +16,7 @@
 <a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Lotus">Milanese Lotus (wiki)</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fancy">Fancy examples</a><br>
 <a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns">Marian's patterns (wiki)</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/fancy">TEST</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/test">TEST</a><br>
 </p>
 
 <h3>Miscellaneous</h3> 
