--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -21,7 +21,7 @@
 
 <h3>Miscellaneous</h3> 
 <p>
-<a href="https://maetempels.github.io/MAE-gf/docs/maths">Mathematics (wiki)</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/maths">Mathematics</a><br>
 <a href="https://github.com/MAETempels/MAE-gf/wiki">Wiki style version</a><br>
 </p>
 
