--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+/* steken en elementen */
 .elem {border: 1px solid DeepSkyBlue;}
 .stch {border: 1px solid DarkTurquoise;}
+
+/* test */
 h1 {color: red;}
+h3 {color: yellow;}
