--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,9 +4,7 @@
 @import "{{ site.theme }}";
 
 /* steken en elementen */
-.elem {border: 1px solid DeepSkyBlue;}
+.elem {border: 1px solid Red;}
 .stch {border: 1px solid DarkTurquoise;}
 
-/* test */
-h1 {color: red;}
-h3 {color: yellow;}
+/*DeepSkyBlue
