--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,8 @@
 @import "{{ site.theme }}";
 
 /* steken en elementen */
-.elem {border: 1px solid Red;}
+.elem {border: 1px solid DeepSkyBlue;}
 .stch {border: 1px solid DarkTurquoise;}
 
-/*DeepSkyBlue*/
+/* test */
+h1 {color: DeepSkyBlue;}
