--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,4 @@
 /* steken en elementen */
 .elem {border: 1px solid DeepSkyBlue;}
 .stch {border: 1px solid DarkTurquoise;}
+.form {background-color="oldLace;" font="10px courier-new;"}
