--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,4 +6,4 @@
 /* steken en elementen */
 .elem {border: 1px solid DeepSkyBlue;}
 .stch {border: 1px solid DarkTurquoise;}
-.form {background-color: OldLace; font: 12px courier-new;}
+.form {background-color: White; font: courier-new;}
