--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -25,6 +25,20 @@
 <a href="https://github.com/MAETempels/MAE-gf/wiki">Wiki style version</a><br>
 </p>
 
+<p><hr></p>
+
+<h3>Groundforge</h3>
 <p>
-<hr>
+  <a href="https://d-bl.github.io/GroundForge/">Groundforge main site"></a><br>
+  <a href="https://d-bl.github.io/GroundForge/help/">Groundforge user guide</a><br>
 </p>
+
+<p><hr></p>
+
+<p>This site is made by M.Tempels and still under construction.</p>
+
+
+  
+  
+
+
