--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -35,7 +35,7 @@
 
 <p><hr></p>
 
-<p>This site is made by M.Tempels and still under construction.</p>
+<p>This site is under construction.</p>
 
 
   
