--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -29,7 +29,7 @@
 
 <h3>Groundforge</h3>
 <p>
-  <a href="https://d-bl.github.io/GroundForge/">Groundforge main site></a><br>
+  <a href="https://d-bl.github.io/GroundForge/">Groundforge main site</a><br>
   <a href="https://d-bl.github.io/GroundForge/help/">Groundforge user guide</a><br>
 </p>
 
