--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,6 @@
 @import "{{ site.theme }}";
 
 /* steken en elementen */
-.elem {border: 1px solid #DBE7F3; background-color: #F2F8FC}
-.stch {border: 1px solid #DBE7F3;}
+.stch {border: 1px solid #DBE7F3; background-color: #F2F8FC}
+.elem {border: 1px solid #DBE7F3;}
 .form {background-color: White; font: courier-new;}
