--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,7 @@
 .stch {border: 1px solid #DBE7F3; background-color: #F2F8FC}
 .elem {border: 1px solid #DBE7F3;}
 .form {background-color: White; font: courier-new;}
+
+/* test */
+ul {color: green}
+h3 {background-color: blue}
