--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,5 @@
 .form {background-color: White; font: courier-new;}
 
 /* test */
-ul {color: green}
-h1 {color: red}
-h2 {color: green}
+h1 {color: red;}
+h2 {color: green;}
