--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,5 +9,5 @@
 .form {background-color: White; font: courier-new;}
 
 /* test */
-h1 {color: red;}
-h2 {color: green;}
+h1 {color: red; background-color: yellow}
+h2 {color: green; border: 1px solid: yellow}
