--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,10 +4,10 @@
 @import "{{ site.theme }}";
 
 /* steken en elementen */
-.stch {border: 1px solid #DBE7F3; background-color: #F2F8FC}
+.stch {border: 1px solid #DBE7F3; background-color: #F2F8FC;}
 .elem {border: 1px solid #DBE7F3;}
 .form {background-color: White; font: courier-new;}
 
 /* test */
-h1 {color: red; background-color: yellow}
-h2 {color: green; border: 1px solid: yellow}
+h1 {color: red; background-color: yellow;}
+h2 {color: green; border: 1px solid yellow;}
