--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,9 +6,6 @@
 /* steken en elementen */
 .stch {border: 1px solid #DBE7F3; background-color: #F2F8FC;}
 .elem {border: 1px solid #DBE7F3;}
-.form {background-color: White; font: courier-new;}
+.form {background-color: White; font: Courier New;}
 
-/* test */
-h1 {color: Red; background-color: Yellow;}
-h2 {color: Green; border: 1px solid Yellow;}
-h3 {color: Blue;}
+/* let op: kleurnamen moeten met een hoofdletter */
