--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,6 @@
 /* steken en elementen */
 .stch {border: 1px solid #DBE7F3; background-color: #F2F8FC;}
 .elem {border: 1px solid #DBE7F3;}
-.form {background-color: White; font: Courier New;}
+.form {background-color: White; font: Courier;}
 
 /* let op: kleurnamen moeten met een hoofdletter */
