--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,6 @@
 .form {background-color: White; font: Courier;}
 
 /* colored things */
-hr {color #DBE7F3;}
+hr {color Red;}
 
 /* let op: kleurnamen moeten met een hoofdletter */
