--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,4 +8,6 @@
 .elem {border: 1px solid #DBE7F3;}
 .form {background-color: White; font: Courier;}
 
+hr {color: Red;}
+
 /* let op: kleurnamen moeten met een hoofdletter */
