--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -10,7 +10,7 @@
 <h3>Examples</h3>
 <p>
 <a href="https://maetempels.github.io/MAE-gf/docs/bias">Bias Grounds</a><br>
-<a href="https://maetempels.github.io/MAE-gf/Snowflakes">Snowflakes</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/Snowflakes">Snowflakes</a><br>
 <a href="https://github.com/MAETempels/MAE-gf/wiki/Spiders">Spiders (wiki)</a><br>
 <a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds (wiki)</a><br>
 <a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Fish">Milanese Fish (wiki)</a><br>
