--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,13 @@
 /* stitches & elements */
 .stch {border: 1px solid #DBE7F3; background-color: #F2F8FC;}
 .elem {border: 1px solid #DBE7F3;}
+.b-grey {background-color: white; color: grey} 
+.b-gree {background-color: white; color: lime} 
+.b-purp {background-color: white; color: purple} 
+.b-red {background-color: white; color: red} 
+.b-blue {background-color: white; color: blue} 
+
+/* others */
 .form {background-color: White; font: Courier;}
 
 /* let op: kleurnamen moeten met een hoofdletter */
