--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -23,6 +23,8 @@
 <h3>Miscellaneous</h3> 
 <p>
 <a href="https://maetempels.github.io/MAE-gf/docs/maths">Mathematics</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/about-us">About us</a><br>
+<br>     
 <a href="https://github.com/MAETempels/MAE-gf/wiki">Wiki style version</a><br>
 </p>
 
