--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -33,8 +33,8 @@
 
 <h2>Groundforge</h2>
 <p>
-  <a href="https://d-bl.github.io/GroundForge/">Groundforge main site</a><br>
-  <a href="https://d-bl.github.io/GroundForge/help/">Groundforge user guide</a><br>
+  <a href="https://d-bl.github.io/GroundForge/">Main site</a><br>
+  <a href="https://d-bl.github.io/GroundForge/help/">User guide</a><br>
 </p>
 
 <p><hr></p>
