--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,5 +14,6 @@
 
 /* others */
 .form {background-color: White; font: Courier;}
+.cenral {align: center;}
 
 /* let op: kleurnamen moeten met een hoofdletter */
