--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,6 @@
 
 /* others */
 .form {background-color: White; font: Courier;}
-.central {align: center;}
+.central {text-align: center;}
 
 /* let op: kleurnamen moeten met een hoofdletter */
