--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -14,7 +14,7 @@
 <a href="https://maetempels.github.io/MAE-gf/docs/spiders">Spiders</a><br>
 <a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds (wiki)</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fish">Milanese Fish</a><br>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Milanese-Lotus">Milanese Lotus (wiki)</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/lotus">Milanese Lotus (wiki)</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fancy">Fancy examples</a><br>
 <a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns">Marian's patterns (wiki)</a><br>
 </p>
