--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -12,7 +12,7 @@
 <a href="https://maetempels.github.io/MAE-gf/docs/bias">Bias Grounds</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/snowflakes">Snowflakes</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/spiders">Spiders</a><br>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Pagoda's-or-Triangular-grounds">Pagoda's or Triangular Grounds (wiki)</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/tria">Pagoda's or Triangular Grounds</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fish">Milanese Fish</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/lotus">Milanese Lotus</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fancy">Fancy examples</a><br>
