--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -16,17 +16,13 @@
 <a href="https://maetempels.github.io/MAE-gf/docs/fish">Milanese Fish</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/lotus">Milanese Lotus</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fancy">Fancy examples</a><br>
-<a href="https://github.com/MAETempels/MAE-gf/wiki/Marian's-patterns">Marian's patterns (wiki)</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/marian">Marian's patterns (wiki)</a><br>
 </p>
 
 <h3>Miscellaneous</h3> 
 <p>
 <a href="https://maetempels.github.io/MAE-gf/docs/maths">Mathematics</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/about-us">About us</a><br>
-<br>     
-<a href="https://github.com/MAETempels/MAE-gf/wiki">Wiki style version</a><br>
-<br>
-<a href="https://maetempels.github.io/MAE-gf/docs/test">TEST</a><br>
 </p>
 
 <p><hr></p>
