--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -16,7 +16,7 @@
 <a href="https://maetempels.github.io/MAE-gf/docs/fish">Milanese Fish</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/lotus">Milanese Lotus</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fancy">Fancy examples</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/marian">Marian's patterns (wiki)</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/marian">Marian's patterns</a><br>
 </p>
 
 <h3>Miscellaneous</h3> 
