--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,5 +1,5 @@
 <figure>
     <!-- make sure the captions have a fixed number of lines to avoid dancing images -->
-    <img src="/GroundForge/{{ include.src }}" alt="{{ include.alt }}">
+    <img src="{{ include.src }}" alt="{{ include.alt }}">
     <figcaption>{{ include.caption }}</figcaption>
 </figure>
