--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,4 +1,4 @@
-<figure class="fig-left">
+<figure>
     <!-- make sure the captions have a fixed number of lines to avoid dancing images -->
     <caption align="right">
     <img src="{{ include.src }}" alt="{{ include.alt }}">
