--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,6 +1,6 @@
 <figure>
     <!-- make sure the captions have a fixed number of lines to avoid dancing images -->
-    <caption align="right">
+    <caption text-align="right">
     <img src="{{ include.src }}" alt="{{ include.alt }}">
     <figcaption>{{ include.caption }}</figcaption>
 </figure>
