--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,6 +1,6 @@
 <figure>
     <!-- make sure the captions have a fixed number of lines to avoid dancing images -->
-    <class="{{ include.class }}">
+    <figure.class="{{ include.class }}">
     <img src="{{ include.src }}" alt="{{ include.alt }}">
     <figcaption>{{ include.caption }}</figcaption>
 </figure>
