--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,8 +19,8 @@
 /* copied from Jo Pol */
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
 
-/*figure { display: inline-block; margin-left:0; margin-top:0; margin-right:1em; }*/
-figure.fig-left image, figcaption { display: block; }
+figure { display: inline-block; margin-left:0; margin-top:0; margin-right:1em; }
+figure image, figcaption { display: block; }
 
 
 
