--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,4 +1,4 @@
-<figure class="{{ include.class }}>
+<figure class="{{ include.class }}">
     <!-- make sure the captions have a fixed number of lines to avoid dancing images -->
     <img src="{{ include.src }}" alt="{{ include.alt }}">
     <figcaption>{{ include.caption }}</figcaption>
