--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,7 +20,7 @@
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
 
 figure.fig-left { display: inline-block; margin-left:15px; margin-top:0; margin-right:1em; }
-figure.fig-left image, figcaption { display: block; }
+figure.fig-left image, figcaption { display: inline-block; }
 
 
 
