--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@
 /* copied from Jo Pol */
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
 
-figure.fig-left { display: inline-block; margin-left:15px; margin-top:0; margin-right:1em; }
+figure.fig-left { float-left; margin-left:0; margin-top:0; margin-right:1em; }
 figure.fig-left image, figcaption { display: inline-block; }
 
 
