--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,5 +23,5 @@
 .fig-left { display: inline-block; margin-left:0; margin-top:0; margin-right:1em; width: 33%; }
 */
 
-figure.fig-left { display: inline-block; margin-left:0; margin-top:0; margin-right:1em; width: 40%; }
-figure.fig-left img, figcaption { display: inline-block;  color:blue}
+figure.fig-left { display: inline-block; margin-left:0; margin-top:0; margin-right:1em; width: 33%; }
+figure.fig-left img, figcaption { display: inline-block;  color:green}
