--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,4 +24,4 @@
 */
 
 figure.fig-left { display: inline-block; margin-left:0; margin-top:0; margin-right:1em; width: 33%; }
-figure.fig-left img, figcaption { display: inline-block;  color:green}
+figure.fig-left image, figcaption { display: inline-block;  color:red}
