--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,4 +24,4 @@
 */
 
 image.fig-left { display: block; margin:0; width: 33%; }
-figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%}
+figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%; color: blue;}
