--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,5 +23,5 @@
 .fig-left { display: inline-block; margin-left:0; margin-top:0; margin-right:1em; width: 33%; }
 */
 
-image.fig-left { display: block; margin:0; width: 33%; }
-figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%; color: blue;}
+image.fig-left { display: block; margin:0;}
+figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%; color:red }
