--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,4 +24,4 @@
 */
 
 img.fig-left { display: block; margin:0; width: 30%}
-figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 60%; color:green }
+figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%; color:white; }
