--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,9 +19,9 @@
 /* copied from Jo Pol */
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
 
-/*
-.fig-left { display: inline-block; margin-left:0; margin-top:0; margin-right:1em; width: 33%; }
-*/
+
+.fig-test { display: inline-block; margin-left:0; margin-top:0; margin-right:2em; width: 33%; color: red; }
+
 
 img.fig-left { display: inline-block; margin:0; width: 30%}
 figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%; }
