--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,9 +20,11 @@
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
 
 /* pictures */
-.fig-left { display: inline-block; margin-left:0; margin-top:0; margin-right:2em; width: 33%; color: red; }
+.fig-left { display: inline-block; margin-left:0; margin-top:0; margin-right:2em; width: 35%; }
 
-/* see figures.html, however, the picture starts not at the left border of file
+/* goes with figure-left.html, however, the picture starts not at the left border of file */
+/* it does not help to use "block" with img. */
+/*
 img.fig-left { display: inline-block; margin:0; width: 30%}
 figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%; }
 */ 
