--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,7 +20,8 @@
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
 
 /* pictures */
-.fig-left { display: inline-block; margin-left:0; margin-top:0; margin-right:2em; width: 35%; }
+.fig-left { display: inline-block; margin:0; width: 30%; }
+.txt-left { display: inline-block: margin-left: 2em; width: 50%; }
 
 /* goes with figure-left.html, however, the picture starts not at the left border of file */
 /* it does not help to use "block" with img. */
