--- a/_includes/figure-left.html
+++ b/_includes/figure-left.html
@@ -3,3 +3,11 @@
     <img src="{{ include.src }}" alt="{{ include.alt }}">
     <figcaption>{{ include.caption }}</figcaption>
 </figure>
+
+<!-- use:
+{% include figure-left.html
+  class="c-text"
+  alt="text"
+  src=" .."
+  caption="text"
+%}
