--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,5 +1,4 @@
 <figure class="pic-left">
-    <!-- make sure the captions have a fixed number of lines to avoid dancing images -->
     <img src="{{ include.src }}" alt="{{ include.alt }}">
 </figure>
-<p class="txt-left">{{ include.caption }}</p>
+<p class="txt-left">{{ include.by-text }}</p>
