--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,4 +1,4 @@
-<figure class="pic-left">
+<figure class="{{ include.class }}">
     <img src="{{ include.src }}" alt="{{ include.alt }}">
 </figure>
-<p class="txt-left">{{ include.content }}</p>
+<p class="{{ include.class }}">{{ include.content }}</p>
