--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,4 +1,6 @@
 <figure class="{{ include.class }}">
     <img src="{{ include.src }}" alt="{{ include.alt }}">
+    <figcaption>{{ include.caption }}</figcaption>
 </figure>
 <p class="{{ include.class }}">{{ include.content }}</p>
+
