--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -2,6 +2,6 @@
     <img src="{{ include.src }}" alt="{{ include.alt }}">
     <figcaption>{{ include.caption }}</figcaption>
 </figure>
-<p class="{{ include.class }}">{{ include.content }}</p>
+<p class="txt-left">{{ include.content }}</p>
 
 /* do not delete <figcaption>-tag line !!
