--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -4,4 +4,4 @@
 </figure>
 <p class="txt-left">{{ include.content }}</p>
 
-/* do not delete <figcaption>-tag line !!
+/* do not delete <figcaption>-tag line !! */
