--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,4 +1,4 @@
-<figure class="pic-left">
+<figure>
     <img src="{{ include.src }}" alt="{{ include.alt }}">
     <figcaption>{{ include.caption }}</figcaption>
 </figure>
