--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,5 +1,5 @@
-<figure>
-    <img src="{{ include.src }}" alt="{{ include.alt }}">
+<figure class="{{ include.class }}">
+     <img src="{{ include.src }}" alt="{{ include.alt }}">
     <figcaption>{{ include.caption }}</figcaption>
 </figure>
 <p class="txt-left">{{ include.content }}</p>
