--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@
 
 /* pictures */
 .fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }
-.txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 50%; color:green;}
+.txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 50%; }
 
 /* goes with figure-left.html, however, the picture starts not at the left border of file */
 /* it does not help to use "block" with img. */
