--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -2,4 +2,4 @@
      <img src="{{ include.src }}" alt="{{ include.alt }}">
     <figcaption>{{ include.caption }}</figcaption>
 </figure>
-<p class="txt-left">{{ include.content }}</p>
+<p class="f-txt-l5">{{ include.content }}</p>
