--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,6 @@
 
 /* pictures */
 img.f-img-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }
-figure.f-img-l3 figcaption { display: inline-block; margin-left:2em; width: 50%; }
-p.f-txt-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; }
+figure.f-img-l3 figcaption { display: inline-block; margin-left:0; width: 50%; }
+p.f-txt-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; color: green; }
 
