--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,6 +23,6 @@
 img.f-img-l3 { display: inline-block; margin:0; width: 30%}
 /*.fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }*/
 /*figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%; }*/
-p.txt-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; color red }
+p.f-txt-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; color red }
 
 
