--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,9 +25,10 @@
 
 /* goes with figure-left.html, however, the picture starts not at the left border of file */
 /* it does not help to use "block" with img. */
-/* img.fig-left { display: inline-block; margin:0; width: 30%}
- figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%; }
 /*
+img.fig-left { display: inline-block; margin:0; width: 30%}
+figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%; }
+*/ 
 
 
 
