--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,10 @@
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
 
 /* pictures */
+img.f-pic-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }
+figure figcaption { display: inline-block; margin-left:2em; width: 50%; color:red;}
+p.f-txt-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; color:blue}
+
 .fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }
 .txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; }
 
