--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@
 
 /* pictures left 30% */
 img.f-pic-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }
-figure figcaption { display: inline-block; margin-left:2em; width: 50%; color:red;}
+figure figcaption { display: inline-block; margin-left:0; width: 50%; color:red;}
 p.f-txt-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; color:blue}
 
 .fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }
