--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,17 +20,11 @@
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
 
 /* pictures left 30% */
-img.f-pic-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }
+figure.f-pic-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }
 figure figcaption { display: inline-block; margin-left:2em; width: 50%; color:yellow;}
 p.f-txt-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; color:green}
 
-.fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }
+/*.fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }*/
 /*.txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; }*/
 
-/* goes with figure-left.html, however, the picture starts not at the left border of file */
-/* it does not help to use "block" with img. */
-/*
-img.fig-left { display: inline-block; margin:0; width: 30%}
-figure.fig-left figcaption { display: inline-block; margin-left:2em; width: 50%; }
-*/ 
 
