--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,8 +21,8 @@
 
 /* pictures left 30% */
 image.f-pic-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }
-figure figcaption { display: inline-block; margin-left:2em; width: 50%; color:yellow;}
-p.f-txt-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; color:green}
+figure figcaption { display: inline-block; margin-left:2em; width: 50%;}
+p.f-txt-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%;}
 
 /*.fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }*/
 /*.txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; }*/
