--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,7 @@
 /* pictures left 30% */
 image.f-pic-l3 { display: inline-block; margin:0; width: 30%; }
 figure {display: block; margin:0;  }
-figure figcaption { display: inline-block; margin-left:2em; width: 50%;}
+figure figcaption.f-cls-l3 { display: inline-block; margin-left:2em; width: 50%;}
 p.f-txt-l3 { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%;}
 
 /*.fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }*/
