--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,5 +1,5 @@
 <figure>
-    <img class="f-pic-l3" src="{{ include.src }}" alt="{{ include.alt }}">
+    <img class="{{ include.class }}" src="{{ include.src }}" alt="{{ include.alt }}">
     <figcaption class="f-cls-l3">{{ include.caption }}</figcaption>
 </figure>
 <p class="f-txt-l3">{{ include.content }}</p>
