--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,5 +1,5 @@
 <figure>
-    <img class="{{ include.class }}" src="{{ include.src }}" alt="{{ include.alt }}">
-    <figcaption class="f-cls-l3">{{ include.caption }}</figcaption>
+    <img class="{{ include.class-p }}" src="{{ include.src }}" alt="{{ include.alt }}">
+    <figcaption class="{{ include.class-c }}">{{ include.caption }}</figcaption>
 </figure>
 <p class="f-txt-l3">{{ include.content }}</p>
