--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,5 +1,5 @@
 <figure>
-    <img class="{{ include.class-p }}" src="{{ include.src }}" alt="{{ include.alt }}">
-    <figcaption class="{{ include.class-c }}">{{ include.caption }}</figcaption>
+    <img class="f-pict" src="{{ include.src }}" alt="{{ include.alt }}">
+    <figcaption>{{ include.caption }}</figcaption>
 </figure>
-<p class="f-txt-l3">{{ include.content }}</p>
+<p class="f-txt">{{ include.content }}</p>
