--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@
 
 /* pictures */
 figure {display: block; margin:0;  }
-figure figcaption { display: inline-block; margin-left:2em; width: 50%;}
+figcaption { display: inline-block; margin-left:2em; width: 50%; color: blue;}
 image.f-pict { display: inline-block; margin:0; width: 30%; }
 p.f-txt { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%;}
 
