--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,8 @@
 
 /* pictures */
 figure {display: block; margin:0;  }
-figcaption { display: inline-block; margin-left:2em; width: 70%; color: green;}
+figcaption.f-perc5 { display: inline-block; margin-left:2em; width: 50%;}
+figcaption.f-perc7 { display: inline-block; margin-left:2em; width: 70%;}
 image.f-pict { display: inline-block; margin:0; width: 30%; }
 p.f-txt { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%;}
 
