--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,5 +1,5 @@
 <figure>
     <img class="f-pict" src="{{ include.src }}" alt="{{ include.alt }}">
-    <figcaption>{{ include.caption }}</figcaption>
+    <figcaption class="{{ include.class }}">{{ include.caption }}</figcaption>
 </figure>
 <p class="f-txt">{{ include.content }}</p>
