--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,8 +21,9 @@
 
 /* pictures */
 figure {display: block; margin:0;  }
-figcaption.f-perc5 { display: inline-block; margin-left:2em; width: 50%;}
-figcaption.f-perc7 { display: inline-block; margin-left:2em; width: 70%;}
+figcaption.f-perc5l { display: inline-block; margin-left:2em; width: 50%;}
+figcaption.f-perc7l { display: inline-block; margin-left:2em; width: 70%;}
+figcaption.f-perc5r { display: inline-block; margin-right:2em; width: 50%;}
 image.f-pict { display: inline-block; margin:0; width: 30%; }
 p.f-txt { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%;}
 
