--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,10 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    {% if page.javascript %}
+    <script src="{{ page.javascript }}"></script>
+    {% endif %}
+
     {% seo %}
 </head>
 
