--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,4 +30,5 @@ p.f-txt { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; 
 /*.fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }*/
 /*.txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; }*/
 
-
+.diagram, .break { clear: both }
+.diagram div { float: right }
