--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,8 +31,8 @@ p.f-txt { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; 
 /*.txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; }*/
 
 /* test */
-img.fl-l { float:left }
-img.fl-r { float:right }
+image.fl-l { float:left }
+image.fl-r { float:right }
 .break { clear: both }
 
 
