--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,7 +33,7 @@ p.f-txt { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; 
 /* test */
 image.fl-l { float:left }
 image.fl-r { float:right }
-.break { clear: both }
+p.break { clear: both }
 
 
 
