--- a/_includes/pict-test.html
+++ b/_includes/pict-test.html
@@ -1,3 +1,5 @@
-	<img class=”{{ include.class }}” src=”{{ include.src }}”>
+<figure>
+	<img class="{{ include.class }}" src="{{ include.src }}">
 	<p>{{ include.description }}</p>
-	<p class=”break”></p>		
+	<p class="break"></p>
+</figure>
