--- a/_includes/pict-test.html
+++ b/_includes/pict-test.html
@@ -1,4 +1,4 @@
-<figure>
+<figure class="diagram">
 	<img class="{{ include.class }}" src="{{ include.src }}">
 	<p>{{ include.description }}</p>
 	<p class="break"></p>
