--- a/_includes/picts-right.html
+++ b/_includes/picts-right.html
@@ -1,4 +1,4 @@
-<figure>
+<figure class="diagram">
     <figcaption class="{{ include.class }}">{{ include.caption }}</figcaption>
     <img class="f-pict" src="{{ include.src }}" alt="{{ include.alt }}">
 </figure>
