--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,5 +34,5 @@ diagram p.f-txt { display: inline-block; margin-right:0; margin-top:0; margin-le
 .diagram image, img.fl-l { float: left; }
 .diagram p.fl-l { margin-left:2em; color: green; }
 .diagram image, img.fl-r { float: right; }
-.diagram p.fr { color: yellow; }
+.diagram p.fl-r { color: yellow; }
 .diagram, .break { clear: both; }
