--- a/_includes/picts-float.html
+++ b/_includes/picts-float.html
@@ -1,5 +1,5 @@
 <figure>
 	<img src="{{ include.src }}" alt="{{ include.alt }}" style="{{ include.style }}">
-	<p class="{{ include.class }}">{{ include.description }}</p>
+	<p>{{ include.description }}</p>
 	<p class="break"></p>
 </figure>
