--- a/_includes/picts-float.html
+++ b/_includes/picts-float.html
@@ -1,5 +1,5 @@
 <figure>
 	<img src="{{ include.src }}" alt="{{ include.alt }}" style="{{ include.style }}">
 	<p>{{ include.description }}</p>
-	<p class="break"></p>
+	<p style="clear: both"></p>
 </figure>
