--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,5 +1,5 @@
 <figure>
-	<img src="{{ include.src }}" alt="{{ include.alt }}" style=style="float: left; margin-right:1em">
+	<img src="{{ include.src }}" alt="{{ include.alt }}" style="float: left; margin-right:1em">
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
 </figure>
