--- a/_includes/picts-right.html
+++ b/_includes/picts-right.html
@@ -1,5 +1,5 @@
 <figure>
 	<img src="{{ include.src }}" alt="{{ include.alt }}" style="float: right; margin-left:1em">
 	<p>{{ include.description }}</p>
-	<p style="clear: both"></p>
+	<span style="clear: both"></span>
 </figure>
