--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,5 +1,5 @@
 <figure>
 	<img src="{{ include.src }}" alt="{{ include.alt }}" style="float: left; margin-right:1em">
 	<p>{{ include.description }}</p>
-	<span style="clear: both"></span>
+	<p style="clear: both"></p>
 </figure>
