--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,7 +13,7 @@
 .b-blue {background-color: white; color: blue;} 
 
 /* others */
-.form {background-color: White; font: Courier;}
+.form {background-color: White; font: Courier; margin-left:2em;}
 .central {text-align: center;}
 
 /* copied from Jo Pol */
