--- a/_includes/formule.html
+++ b/_includes/formule.html
@@ -1,3 +1,3 @@
-<div style="background-color: White; font: Courier;">
-  <p style="margin-left:2em;">{{include.formule}}</p>
+<div style="background-color: White;">
+  <p style="margin-left:2em; font: Courier;">{{include.formule}}</p>
 </div>
