--- a/_includes/formule.html
+++ b/_includes/formule.html
@@ -1,5 +1,4 @@
-<div style="background-color: White;">
+<div style="background-color: White; color: Black">
  &nbsp;
   <p style="margin-left:2em; font: 12px courier;">{{include.formule}}</p>
- &nbsp; 
 </div>
