20171120 replaced & with entitie &amp.

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -3,7 +3,7 @@
 <h3>Start etc.</h3>
 <p>
 <a href="https://maetempels.github.io/MAE-gf/index">Start page</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/tricks">Tips, Tricks & Notes</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/tricks">Tips, Tricks &amp; Notes</a><br>
 </p>
 
 <h3>Examples</h3>
@@ -21,7 +21,7 @@
 <h3>Miscellaneous</h3> 
 <p>
 <a href="https://maetempels.github.io/MAE-gf/docs/maths">Mathematics</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/about-us">About us & Contact</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/about-us">About us &amp; Contact</a><br>
 </p>
 
 <p><hr></p>
